--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
-    {% if site.footer_fixed %}
+    <!-- {% if site.footer_fixed %} -->
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
+        &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. 
         {%- if site.impressum_path -%}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
         {%- endif -%}
@@ -10,7 +10,7 @@
         {%- endif %}
       </div>
     </footer>
-    {%- else -%}
+    <!-- {%- else -%}
     <footer class="sticky-bottom mt-5">
       <div class="container">
         &copy; Copyright {{ site.time | date: '%Y' }} {{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}. {{ site.footer_text }}
@@ -22,4 +22,4 @@
         {%- endif %}
       </div>
     </footer>
-    {%- endif %}
+    {%- endif %} -->
