--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,57 +3,56 @@ layout: default
 ---
 
 <!-- about.html -->
-      <div class="post">
-        <header class="post-header">
-          <h1 class="post-title">
-           {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
-          </h1>
-          <p class="desc">{{ page.subtitle }}</p>
-        </header>
-
-        <article>
-          {% if page.profile -%}
-          <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
-            {%- if page.profile.image %}
-              {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
-              {% include figure.html 
-              path=profile_image_path 
-              class="img-fluid z-dept-1 rounded"
-              alt=page.profile.image -%}
-            {% endif -%}
-            {%- if page.profile.address %}
-            <div class="address">
-              {{ page.profile.address }}
+<div class="post">
+  <header class="post-header">
+    <div class="row align-items-center justify-content-center">
+      {% if page.profile -%}
+      <div class="profile float-center col-5" width="200px">
+        {% if page.profile.image %}
+          {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
+          {% include figure.html 
+          path=profile_image_path 
+          class="img-fluid z-dept-1 rounded"
+          alt=page.profile.image -%}
+        {% endif %}
+        {% if page.profile.address %}
+        <div class="address">
+            {{ page.profile.address }}
+        </div>
+        {% endif %}
+      </div>
+      {% endif %}
+      <div class="profile float-center col-6">
+        <h1 class="post-title" style="padding-top: 10px; text-align: center;">
+            <img id="MySignImg" class="sign" width="200px" src="/Jackory.github.io/assets/img/sign.png" alt="" itemprop="image" style="text-align: center"/>
+            <br>
+            Jiang Yuhua
+            {% if page.social %}
+            <div class="social" >
+                <div class="contact-icons">
+                    {% include social.html %}
+                </div>
             </div>
-            {%- endif %}
-          </div>
-          {%- endif %}
+            {% endif %}
 
-          <div class="clearfix">
-            {{ content }}
-          </div>
+        </h1>
+        <p class="desc">{{ page.description }}</p>
+    </div>
+    </div>
+  </header>
+  <article>
+    <div class="clearfix" style="padding-top: 4em">
+      {{ content }}
+    </div>
 
-          {% if page.news -%}
-          <!-- News -->
-          {%- include news.html %}
-          {%- endif %}
-          {% if page.selected_papers -%}
-            <!-- Selected papers -->
-            {%- include selected_papers.html %}
-          {%- endif %}
-          {%- if page.social %}
-          <!-- Social -->
-          <div class="social">
-            <div class="contact-icons">
-            {% include social.html %}
-            </div>
-
-            <div class="contact-note">
-              {{ site.contact_note }}
-            </div>
-            
-          </div>
-          {%- endif %}
-        </article>
+    {% if page.news -%}
+    <!-- News -->
+    {%- include news.html %}
+    {%- endif %}
+    {% if page.selected_papers -%}
+      <!-- Selected papers -->
+      {%- include selected_papers.html %}
+    {%- endif %}
+  </article>
 
 </div>
