--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -24,7 +24,7 @@ layout: default
       {% endif %}
       <div class="profile float-center col-6">
         <h1 class="post-title" style="padding-top: 10px; text-align: center;">
-            <img id="MySignImg" class="sign" width="200px" src="/Jackory.github.io/assets/img/sign.png" alt="" itemprop="image" style="text-align: center"/>
+            <img id="MySignImg" class="sign" width="200px" src="../assets/img/sign.png" alt="" itemprop="image" style="text-align: center"/>
             <br>
             Jiang Yuhua
             {% if page.social %}
